--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: kotlin_version
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-jdk8', version: '0.17'
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.17'
+    compile 'com.mantono:pyttipanna:0.1.1:sources'
+    compile 'com.mantono:pyttipanna:0.1.1'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M4'
     testCompile "org.junit.platform:junit-platform-launcher:$junit_platform_version"
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M4'
